# Neural-Network-MLP-CPP

./: CMakeLists.txt  README.md  build.sh  main.cpp  redeNeural.cpp  teste  teste_unitario_rede
include/: redeNeural.hpp
